@@ -3,6 +3,8 @@ package demo.scriptCore.scheduleClawing.jobInfo.service.impl;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
@@ -106,8 +108,8 @@ public class V2exJobInfoCollectionServiceImpl extends JobInfoCollectionCommonSer
 
 		URL url = null;
 		try {
-			url = new URL(urlStr);
-		} catch (MalformedURLException e) {
+			url = new URI(urlStr).toURL();
+		} catch (MalformedURLException | URISyntaxException e) {
 		}
 
 		StringBuffer htmlStrBuffer = new StringBuffer();
